--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     app: {{ .Values.appName }}
 spec:
-  replicas: 3
+  replicas: {{  .Values.replicas  }}
   selector:
     matchLabels:
       app: {{ .Values.appName }}
