--- a/values.yaml
+++ b/values.yaml
@@ -10,3 +10,5 @@ env:
 
 certarn: arn:aws:acm:us-east-1:492804330065:certificate/5f8797c5-fdbb-4d49-9b3d-0e58d4cb9621
 connectdb: postgresql://postgres:4fa680xf7OuXHZ4n@perntodo.cba6rpvi5fmd.us-east-1.rds.amazonaws.com:5432/perntodo?sslmode=require
+
+replicas: 5
